# webxraydb-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml
app/: package.json  vite.config.ts  vitest.config.ts
app/src/components/docs/: EquationBlock.tsx  ReferenceList.tsx  ToolDocsButton.tsx  (+1 more)
app/src/docs/: tool-docs.test.ts  tool-docs.ts  types.ts
app/src/hooks/: useIsMobile.ts  useWasm.ts
app/src/lib/: constants.ts  csv-export.ts  inputs.test.ts  inputs.ts  ionchamber-mix.test.ts  ionchamber-mix.ts  sample-preparation-helper.test.ts  sample-preparation-helper.ts  sample-weight-calc.test.ts  sample-weight-calc.ts  table.test.ts  table.ts  theme.ts  ui-state.ts  wasm-api.ts  wasm.ts
app/src/routes/: __root.tsx  analyzers.tsx  attenuation.tsx  darwin.tsx  edges.tsx  element.$z.tsx  formulas.tsx  index.tsx  ionchamber.tsx  lines.tsx  reflectivity.tsx  sample-preparation-helper.tsx  sample-weight.tsx  scattering.tsx  self-absorption.tsx
app/src/styles/: app.css
crates/selfabs/: Cargo.toml
crates/selfabs/src/: ameyanagi.rs  atoms.rs  booth.rs  common.rs  fluo.rs  lib.rs  troger.rs
crates/webxraydb-wasm/: Cargo.toml
crates/webxraydb-wasm/src/: attenuation.rs  edges_lines.rs  element.rs  formula.rs  ionchamber.rs  lib.rs  optics.rs  scattering.rs  selfabs.rs  types.rs
desktop-tauri/: README.md  package.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: main.rs
docs/: self-absorption.md
(+16 files in other folders)
